--- a/cache-catalog/pom.xml
+++ b/cache-catalog/pom.xml
@@ -19,6 +19,17 @@
 	
 	<dependencies>
 		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-cache</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		<!-- 서드파티(Redis)를 사용하기 위한 스프링부트 스타터 라이브러리-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.2</version>
