--- a/sample-src/cache-users-complete/src/main/resources/application.yml
+++ b/sample-src/cache-users-complete/src/main/resources/application.yml
@@ -20,3 +20,15 @@ spring:
     driverClassName: org.h2.Driver
     username: sa
     password: 
+
+  redis:
+    lettuce:
+      timeout: 1000    # 10초
+      shutdown-timeout: 100
+      auto-reconnect: false
+      pool:
+        max-active: 1   # pool에 할당할수 있는 커넥션 최대수(default:8)
+        max-idle: 1     # pool의 idle 커넥션 최대수(default:8)
+        min-idle: 0     # pool의 idle 커넥션 최소수(default:0)
+    host: localhost  # 
+    port: 6379
